fixed container printing overflow

--- a/client/src/app/tools/components/shell/shell.component.css
+++ b/client/src/app/tools/components/shell/shell.component.css
@@ -13,7 +13,7 @@ nav {
 .container-printing {
   background: #f7f7f7;
   margin-top: 0;
-  height: 100vh;
+  height: 100%;
 }
 
 .header-bg {
